#733: added parameter webDriverGridTimeout
Plus come code cleaning