@@ -4,9 +4,14 @@ package com.seleniumtests.ut.browserfactory;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Arrays;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import com.seleniumtests.core.TestStepManager;
@@ -75,7 +80,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	@BeforeMethod(groups= {"ut"})
 	public void init() throws Exception {
 		when(config.getTestContext()).thenReturn(context);
-		Mockito.when(config.getDebug()).thenReturn(Arrays.asList(DebugMode.NONE));
+		Mockito.when(config.getDebug()).thenReturn(List.of(DebugMode.NONE));
 
 		when(config.getBrowserType()).thenReturn(BrowserType.HTMLUNIT);
 		when(config.getPlatform()).thenReturn("windows");
@@ -88,28 +93,28 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 
 		when(options.timeouts()).thenReturn(timeouts);
 		
-		when(gridConnector1.getHubUrl()).thenReturn(new URL("http://localhost:1111/wd/hub"));
-		when(gridConnector2.getHubUrl()).thenReturn(new URL("http://localhost:2222/wd/hub"));
+		when(gridConnector1.getHubUrl()).thenReturn(new URI("http://localhost:1111/wd/hub").toURL());
+		when(gridConnector2.getHubUrl()).thenReturn(new URI("http://localhost:2222/wd/hub").toURL());
 		when(gridConnector1.uploadMobileApp(any())).thenReturn((MutableCapabilities) caps);
 		when(gridConnector2.uploadMobileApp(any())).thenReturn((MutableCapabilities) caps);
 		when(context.getTestStepManager()).thenReturn(new TestStepManager());
+		when(context.getWebDriverGridTimeout()).thenReturn(SeleniumTestsContext.DEFAULT_WEB_DRIVER_GRID_TIMEOUT);
 		SeleniumTestsContextManager.setThreadContext(context);
 	}
 	
 	/**
 	 * Check we create a driver from grid
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testDriverCreation() throws Exception {
+	public void testDriverCreation() {
 
 		when(context.getTestType()).thenReturn(TestType.WEB);
-		
+
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		
 		// connect to grid
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
@@ -118,7 +123,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 			WebDriver newDriver = driverFactory.createWebDriver();
 
 			// check that with a single driver creation, retry timeout is 30 mins
-			Assert.assertEquals(driverFactory.getInstanceRetryTimeout(), SeleniumGridDriverFactory.DEFAULT_RETRY_TIMEOUT);
+			Assert.assertEquals(driverFactory.getInstanceRetryTimeout(), SeleniumTestsContext.DEFAULT_WEB_DRIVER_GRID_TIMEOUT);
 
 			// issue #280: also check that BrowserInfo is not null
 			Assert.assertNotNull(newDriver);
@@ -130,18 +135,18 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	}
 	
 	@Test(groups={"ut"})
-	public void testMobileDriverCreation() throws Exception {
+	public void testMobileDriverCreation()  {
 
 		when(config.getPlatform()).thenReturn("android");
 		when(config.getApp()).thenReturn("myApp.apk");
 		when(context.getTestType()).thenReturn(TestType.APPIUM_APP_ANDROID);
 		
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		when(config.getAppiumCapabilities()).thenReturn(new BaseOptions<>());
 		
 		// connect to grid
-		try (MockedConstruction mockedAndroidDriver = mockConstruction(AndroidDriver.class, (androidDriver, context1) -> {
+		try (MockedConstruction<AndroidDriver> mockedAndroidDriver = mockConstruction(AndroidDriver.class, (androidDriver, context1) -> {
 			when(androidDriver.manage()).thenReturn(options);
 			when(androidDriver.getCapabilities()).thenReturn(caps);
 		})) {
@@ -157,7 +162,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	}
 	
 	@Test(groups={"ut"})
-	public void testIosMobileDriverCreation() throws Exception {
+	public void testIosMobileDriverCreation() {
 		
 
 		when(config.getPlatform()).thenReturn("ios");
@@ -165,11 +170,11 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 		when(context.getTestType()).thenReturn(TestType.APPIUM_APP_IOS);
 		
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		when(config.getAppiumCapabilities()).thenReturn(new MutableCapabilities());
 		
 		// connect to grid
-		try (MockedConstruction mockedIOSDriver = mockConstruction(IOSDriver.class, (iosDriver, context1) -> {
+		try (MockedConstruction<IOSDriver> mockedIOSDriver = mockConstruction(IOSDriver.class, (iosDriver, context1) -> {
 			when(iosDriver.manage()).thenReturn(options);
 			when(iosDriver.getCapabilities()).thenReturn(caps);
 		})) {
@@ -185,18 +190,18 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	}
 
 	@Test(groups={"ut"})
-	public void testWindowsDriverCreation() throws Exception {
+	public void testWindowsDriverCreation() {
 
 		when(config.getPlatform()).thenReturn("windows");
 		when(config.getApp()).thenReturn("notepad.exe");
 		when(context.getTestType()).thenReturn(TestType.APPIUM_APP_WINDOWS);
 
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		when(config.getAppiumCapabilities()).thenReturn(new BaseOptions<>());
 
 		// connect to grid
-		try (MockedConstruction mockedDriver = mockConstruction(AppiumDriver.class, (windowsDriver, context1) -> {
+		try (MockedConstruction<AppiumDriver> mockedDriver = mockConstruction(AppiumDriver.class, (windowsDriver, context1) -> {
 			when(windowsDriver.manage()).thenReturn(options);
 			when(windowsDriver.getCapabilities()).thenReturn(caps);
 		})) {
@@ -209,18 +214,18 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	}
 
 	@Test(groups={"ut"}, expectedExceptions = ConfigurationException.class, expectedExceptionsMessageRegExp = "Platform linux is not supported for application tests")
-	public void testLinuxDriverCreation() throws Exception {
+	public void testLinuxDriverCreation() {
 
 		when(config.getPlatform()).thenReturn("linux");
 		when(config.getApp()).thenReturn("app");
 		when(context.getTestType()).thenReturn(TestType.APPIUM_APP_WINDOWS);
 
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		when(config.getAppiumCapabilities()).thenReturn(new BaseOptions<>());
 
 		// connect to grid
-		try (MockedConstruction mockedDriver = mockConstruction(RemoteWebDriver.class, (windowsDriver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (windowsDriver, context1) -> {
 			when(windowsDriver.manage()).thenReturn(options);
 			when(windowsDriver.getCapabilities()).thenReturn(caps);
 		})) {
@@ -234,19 +239,19 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 
 	/**
 	 * When getSessionInformationFromGrid fails, we should quit the driver in case it has been created
-	 * @throws Exception
 	 */
-	@Test(groups={"ut"}, expectedExceptions = SessionNotCreatedException.class)
-	public void testDriverCreationWithSessionInformationFailing() throws Exception {
+	@Test(groups={"ut"}, expectedExceptions = SeleniumGridNodeNotAvailable.class)
+	public void testDriverCreationWithSessionInformationFailing() {
 
 		when(context.getTestType()).thenReturn(TestType.WEB);
+		when(context.getWebDriverGridTimeout()).thenReturn(20);
 
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		doThrow(new SessionNotCreatedException("some error")).when(gridConnector1).getSessionInformationFromGrid(any(RemoteWebDriver.class), anyLong());
 
 		// connect to grid
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
@@ -256,75 +261,93 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 				driverFactory.createWebDriver();
 			} finally {
 				// check driver has been quit (1 time for each retry)
-				verify((RemoteWebDriver) mockedRemoteWebDriver.constructed().get(0)).quit();
-				verify((RemoteWebDriver) mockedRemoteWebDriver.constructed().get(1)).quit();
-				verify((RemoteWebDriver) mockedRemoteWebDriver.constructed().get(2)).quit();
+				verify(mockedRemoteWebDriver.constructed().get(0)).quit();
+				verify(mockedRemoteWebDriver.constructed().get(1)).quit();
+				verify(mockedRemoteWebDriver.constructed().get(2)).quit();
 			}
 		}
 	}
 	
 	/**
 	 * If grid is not active, driver is not created and exception is raised
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"}, expectedExceptions=SeleniumGridNodeNotAvailable.class)
-	public void testDriverNotCreatedIfGridNotActive() throws Exception {
+	public void testDriverNotCreatedIfGridNotActive() {
 
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
 		})) {
-			SeleniumGridDriverFactory.setRetryTimeout(2);
+			when(context.getWebDriverGridTimeout()).thenReturn(2);
 
 			when(context.getTestType()).thenReturn(TestType.WEB);
 			
 			when(gridConnector1.isGridActive()).thenReturn(false);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 
 			SeleniumGridDriverFactory driverFactory = new SeleniumGridDriverFactory(config, false);
 			driverFactory.createWebDriver();
 			
-		} finally {
-			SeleniumGridDriverFactory.setRetryTimeout(SeleniumGridDriverFactory.DEFAULT_RETRY_TIMEOUT);
 		}
 		
 	}
 	
 	/**
 	 * If exception is raised during driver creation, exception is raised
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"}, expectedExceptions=SeleniumGridNodeNotAvailable.class)
-	public void testDriverNotCreatedIfError() throws Exception {
+	public void testDriverNotCreatedIfError() {
 
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
 		})) {
-			SeleniumGridDriverFactory.setRetryTimeout(1);
+			when(context.getWebDriverGridTimeout()).thenReturn(1);
 
 			when(context.getTestType()).thenReturn(TestType.WEB);
 			
 			when(gridConnector1.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 			
-			// connect to grid;
+			// connect to grid
 			SeleniumGridDriverFactory factory = spy(new SeleniumGridDriverFactory(config));
 			when(factory.getDriverInstance(any(URL.class), any(MutableCapabilities.class))).thenThrow(new WebDriverException(""));
 			factory.createWebDriver();
-			
-		} finally {
-			SeleniumGridDriverFactory.setRetryTimeout(SeleniumGridDriverFactory.DEFAULT_RETRY_TIMEOUT);
-		}	
+		}
+	}
+
+	/**
+	 * Check timeout set for driver creation is used
+	 */
+	@Test(groups={"ut"}, expectedExceptions=SeleniumGridNodeNotAvailable.class)
+	public void testDriverNotCreatedIfErrorWithTimeout() {
+
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+			when(driver.manage()).thenReturn(options);
+			when(driver.getCapabilities()).thenReturn(caps);
+		})) {
+			when(context.getWebDriverGridTimeout()).thenReturn(5);
+
+			when(context.getTestType()).thenReturn(TestType.WEB);
+
+			when(gridConnector1.isGridActive()).thenReturn(true);
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
+
+			// connect to grid
+			Instant start = Instant.now();
+			SeleniumGridDriverFactory factory = spy(new SeleniumGridDriverFactory(config));
+			when(factory.getDriverInstance(any(URL.class), any(MutableCapabilities.class))).thenThrow(new WebDriverException(""));
+			factory.createWebDriver();
+			Assert.assertTrue(Duration.between(start, Instant.now()).toMillis() > 5000);
+		}
 	}
 	
 	/**
 	 * Check we use the first grid connector if it's available
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testDriverCreationWithSeveralGridConnectors() throws Exception {
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+	public void testDriverCreationWithSeveralGridConnectors() {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
 		})) {
@@ -333,7 +356,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 
 			when(gridConnector1.isGridActive()).thenReturn(true);
 			when(gridConnector2.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1, gridConnector2));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1, gridConnector2));
 
 			SeleniumGridDriverFactory factory = new SeleniumGridDriverFactory(config, false);
 			WebDriver newDriver = factory.createWebDriver();
@@ -348,10 +371,10 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	}
 
 	@Test(groups={"ut"})
-	public void testShuffleGridConnectors() throws Exception {
+	public void testShuffleGridConnectors() {
 
 		when(context.getTestType()).thenReturn(TestType.WEB);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1, gridConnector2));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1, gridConnector2));
 
 		// check that at least once, order is changed
 		boolean ok = false;
@@ -370,12 +393,11 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	
 	/**
 	 * Check we use the first grid connector if it's available
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testDriverCreationWithSeveralGridConnectorsOneUnavailable() throws Exception {
+	public void testDriverCreationWithSeveralGridConnectorsOneUnavailable() {
 
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
@@ -384,7 +406,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 
 			when(gridConnector1.isGridActive()).thenReturn(false);
 			when(gridConnector2.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1, gridConnector2));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1, gridConnector2));
 
 			SeleniumGridDriverFactory factory = new SeleniumGridDriverFactory(config, false);
 			WebDriver newDriver = factory.createWebDriver();
@@ -398,32 +420,30 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	
 	/**
 	 * Check we use the connector which is not in error
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testDriverCreationWithSeveralGridConnectorsOneInError() throws Exception {
+	public void testDriverCreationWithSeveralGridConnectorsOneInError() throws URISyntaxException, MalformedURLException {
 
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
 		})) {
-			SeleniumGridDriverFactory.setRetryTimeout(1);
-			
+			when(context.getWebDriverGridTimeout()).thenReturn(1);
 
 			when(context.getTestType()).thenReturn(TestType.WEB);
 			
 			when(gridConnector1.isGridActive()).thenReturn(true);
 			when(gridConnector2.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1, gridConnector2));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1, gridConnector2));
 			
 			// first driver will create an exception
 			SeleniumGridDriverFactory factory = spy(new SeleniumGridDriverFactory(config, false));
 
 			// first driver creation will fail, the second one (on second grid) will succeed
-			when(factory.getDriverInstance(eq(new URL("http://localhost:1111/wd/hub")), any(MutableCapabilities.class))).thenThrow(new WebDriverException(""));
-			RemoteWebDriver drv = new RemoteWebDriver(new URL("http://localhost:2222/wd/hub"), caps);
-			when(factory.getDriverInstance(eq(new URL("http://localhost:2222/wd/hub")), any(MutableCapabilities.class))).thenReturn(drv);
+			when(factory.getDriverInstance(eq(new URI("http://localhost:1111/wd/hub").toURL()), any(MutableCapabilities.class))).thenThrow(new WebDriverException(""));
+			RemoteWebDriver drv = new RemoteWebDriver(new URI("http://localhost:2222/wd/hub").toURL(), caps);
+			when(factory.getDriverInstance(eq(new URI("http://localhost:2222/wd/hub").toURL()), any(MutableCapabilities.class))).thenReturn(drv);
 			WebDriver newDriver = factory.createWebDriver();
 			Assert.assertNotNull(newDriver);
 
@@ -432,9 +452,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 
 			Assert.assertEquals(factory.getActiveGridConnector(), gridConnector2);
 			
-		} finally {
-			SeleniumGridDriverFactory.setRetryTimeout(SeleniumGridDriverFactory.DEFAULT_RETRY_TIMEOUT);
-		}	
+		}
 	}
 	
 	
@@ -442,11 +460,10 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	/**
 	 * Check we can force driver to be created on the same node using capabilities if DriverConfig.getRunOnSameNode() specifies the node name
 	 * For this to work a previous driver must have been created for one of the configured grid connector
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testDriverCreationOnSameNode() throws Exception {
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+	public void testDriverCreationOnSameNode() {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
@@ -455,7 +472,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 			when(context.getTestType()).thenReturn(TestType.WEB);
 
 			when(gridConnector1.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 			when(config.getRunOnSameNode()).thenReturn("http://localhost:5556/");
 			when(config.getSeleniumGridConnector()).thenReturn(gridConnector1); // simulate a previously created driver
 
@@ -473,32 +490,30 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	
 	/**
 	 * Check capability is correctly set when requested to run on same node
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testCapabilitiesCreationOnSameNode() throws Exception {
+	public void testCapabilitiesCreationOnSameNode() {
 		
 
 		when(context.getTestType()).thenReturn(TestType.WEB);
 		
 		when(gridConnector1.isGridActive()).thenReturn(true);
-		when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
 		when(config.getRunOnSameNode()).thenReturn("http://localhost:5556/");
 		when(config.getSeleniumGridConnector()).thenReturn(gridConnector1); // simulate a previously created driver
 
-		MutableCapabilities caps = new SeleniumGridDriverFactory(config).createSpecificGridCapabilities(config);
+		caps = new SeleniumGridDriverFactory(config).createSpecificGridCapabilities(config);
 		Assert.assertEquals(caps.getCapability(SeleniumRobotCapabilityType.ATTACH_SESSION_ON_NODE), "http://localhost:5556/");
 	}
 	
 	/**
 	 * Check we can force driver to be created on the same node using capabilities if DriverConfig.getRunOnSameNode() specifies the node name
 	 * For this to work a previous driver must have been created for one of the configured grid connector
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"})
-	public void testDriverCreationOnSameNodeMultipleHubs() throws Exception {
+	public void testDriverCreationOnSameNodeMultipleHubs() {
 
-		try (MockedConstruction mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
+		try (MockedConstruction<RemoteWebDriver> mockedRemoteWebDriver = mockConstruction(RemoteWebDriver.class, (driver, context1) -> {
 
 			when(driver.manage()).thenReturn(options);
 			when(driver.getCapabilities()).thenReturn(caps);
@@ -508,7 +523,7 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 
 			when(gridConnector1.isGridActive()).thenReturn(true);
 			when(gridConnector2.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1, gridConnector2));
+			when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1, gridConnector2));
 			when(config.getRunOnSameNode()).thenReturn("http://localhost:5556/");
 			when(config.getSeleniumGridConnector()).thenReturn(gridConnector2); // simulate a previously created driver
 
@@ -525,27 +540,22 @@ public class TestSeleniumGridDriverFactory extends MockitoTest {
 	
 	/**
 	 * Check that it's not possible to create a driver on same node is no previous driver has been created before (gridConnector is null in context)
-	 * @throws Exception
 	 */
 	@Test(groups={"ut"}, expectedExceptions=ScenarioException.class)
-	public void testDriverDoNotCreateDriverOnSameNodeWithoutPreviousOne() throws Exception {
-		
-		try {
-			SeleniumGridDriverFactory.setRetryTimeout(1);
+	public void testDriverDoNotCreateDriverOnSameNodeWithoutPreviousOne() {
 
-			when(context.getTestType()).thenReturn(TestType.WEB);
-			
-			when(gridConnector1.isGridActive()).thenReturn(true);
-			when(context.getSeleniumGridConnectors()).thenReturn(Arrays.asList(gridConnector1));
-			when(config.getRunOnSameNode()).thenReturn("http://localhost:5556/");
-			when(config.getSeleniumGridConnector()).thenReturn(null);			// simulate the case where no previous driver was created
-			
-			// connect to grid
-			new SeleniumGridDriverFactory(config).createWebDriver();
+		when(context.getWebDriverGridTimeout()).thenReturn(1);
 
-		} finally {
-			SeleniumGridDriverFactory.setRetryTimeout(SeleniumGridDriverFactory.DEFAULT_RETRY_TIMEOUT);
-		}	
+		when(context.getTestType()).thenReturn(TestType.WEB);
+
+		when(gridConnector1.isGridActive()).thenReturn(true);
+		when(context.getSeleniumGridConnectors()).thenReturn(List.of(gridConnector1));
+		when(config.getRunOnSameNode()).thenReturn("http://localhost:5556/");
+		when(config.getSeleniumGridConnector()).thenReturn(null);			// simulate the case where no previous driver was created
+
+		// connect to grid
+		new SeleniumGridDriverFactory(config).createWebDriver();
+
 	}
 	
 }
